# lor

./: .env  Makefile  pyproject.toml  setup.cfg
.github/workflows/: workflow.yml
src/freq_app/: runner.py  service.py
src/freq_app/config/: logging.py  settings.py
src/freq_app/data/: priors.json  raw_probs.json  weights.json
src/freq_app/model/: model_builder.py  priors.py  weights.py
src/freq_app/prod_model/: prod_model.pkl
src/freq_app/utils/: math_utils.py
tests/: risky_case.py
